# goit-pythonweb-hw-10

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 5d6a6eacb838_init.py  87fc0e1fa609_confirmed.py  bdcd774c1aef_.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/services/: auth.py  contacts.py  users.py
